<resources>
    <string name="app_name">PayRoll</string>
    <string name="pay">Pay goes here…</string>
    <string name="weekpay">Weekly Pay</string>
    <string name="pay_rate">Pay Rate</string>
    <string name="hours">Hours</string>
    <string name="name_pay">Please Enter Hours Worked and Pay Rate</string>
    <string name="employee_name">Employee Name</string>
    <string name="name_ph">Name</string>
    <string name="date">Select Date</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="preference_file_key">com.drod2169.payroll.PREFERENCE_FILE_KEY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_employee_s_name">Set Employee\'s Name</string>
    <string name="set_pay_rate">Set Pay Rate</string>
    <string name="button">Button</string>
    <string name="select_an_employee_from_the_list">Select an Employee from the list..</string>
</resources>
