<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.drod2169.payroll.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_name"
        android:textSize="18sp"
        android:id="@+id/name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_ph"
        android:ems="10"
        android:layout_below="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:layout_marginTop="15dp"
        android:id="@+id/empName" />

    <TextView
        android:text="@string/name_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_below="@+id/empName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hours_worked"
        android:text="@string/hours"
        android:layout_below="@+id/hours"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:text="@string/hours"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:onClick="hours" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/pay_rate"
        android:ems="10"
        android:layout_below="@+id/hours_worked"
        android:layout_marginTop="12dp"
        android:id="@+id/payRate" />

    <Button
        android:text="@string/weekpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payRate"
        android:layout_centerVertical="true"
        android:id="@+id/weekPay"
        android:onClick="pay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/pay"
        android:textSize="20sp"
        android:text="@string/pay"
        android:layout_below="@+id/weekPay"
        android:layout_alignEnd="@+id/hours" />

</RelativeLayout>
