<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.drod2169.payroll.OneFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_name"
        android:textSize="18sp"
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/selectEmployee"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/empName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:ems="10"
        android:hint="@string/name_ph"
        android:inputType="textPersonName" />

    <View
        android:layout_height="2dip"
        android:background="#FF909090"
        android:layout_width="wrap_content"
        android:id="@+id/view"
        android:layout_below="@+id/setName" />

    <TextView
        android:text="@string/name_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/payRate"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/hours_worked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hours"
        android:layout_toEndOf="@+id/name"
        android:hint="@string/hours"
        android:inputType="numberDecimal" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:text="@string/hours"
        android:onClick="onClick"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <View
        android:layout_height="2dip"
        android:background="#FF909090"
        android:layout_width="wrap_content"
        android:layout_below="@id/hours" />

    <EditText
        android:id="@+id/payRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/pay_rate"
        android:inputType="numberDecimal" />

    <Button
        android:text="@string/weekpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weekPay"
        android:onClick="pay"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/hours_worked"
        android:layout_alignEnd="@+id/payRate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pay"
        android:textSize="20sp"
        android:text="@string/pay"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/weekPay"
        android:layout_alignStart="@+id/weekPay" />

    <Button
        android:id="@+id/setName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setName"
        android:text="@string/set_employee_s_name"
        android:layout_alignBottom="@+id/empName"
        android:layout_toEndOf="@+id/empName" />

    <Button
        android:id="@+id/setPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/payRate"
        android:layout_toEndOf="@+id/pay"
        android:onClick="setEmpPayRate"
        android:text="@string/set_pay_rate" />

    <Button
        android:id="@+id/selectEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/setPay"
        android:onClick="showEmployeeSelector"
        android:text="Select Employee" />

    <!--<Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_an_employee_from_the_list"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />-->


</RelativeLayout>
