<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.drod2169.payroll.WorkActivity">

    <EditText
        android:id="@+id/in_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:inputType="date" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/in_date"
        android:layout_toEndOf="@+id/in_date"
        android:layout_toRightOf="@+id/in_date"
        android:onClick="showDateDialog"
        android:text="@string/date" />

    <EditText
        android:id="@+id/in_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/in_date"
        android:inputType="time" />

    <Button
        android:id="@+id/btn_clock_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date"
        android:layout_below="@+id/btn_date"
        android:onClick="showClockInDialog"
        android:text="@string/clock_in" />

    <EditText
        android:id="@+id/out_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/in_time"
        android:inputType="time" />

    <Button
        android:id="@+id/btn_clock_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_clock_in"
        android:layout_alignStart="@+id/btn_clock_in"
        android:layout_below="@+id/btn_clock_in"
        android:onClick="showClockOutDialog"
        android:text="@string/clock_out" />


    <Button
        android:id="@+id/hours_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_clock_out"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:onClick="finalHours"
        android:text="@string/hours" />



</RelativeLayout>
